[package]
name = "mdbook-numthm"
authors = ["Yannick Seurin"]
version = "0.3.0"
edition = "2021"
description = "An mdbook preprocessor for automatically numbering theorems, lemmas, etc."
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/mdbook-numthm"
homepage = "https://github.com/yannickseurin/mdbook-numthm"
repository = "https://github.com/yannickseurin/mdbook-numthm"
keywords = ["mdbook", "preprocessor", "katex"]

[dependencies]
clap = "4.5.48"
env_logger = "0.11.8"
lazy_static = "1.5.0"
log = "0.4.28"
mdbook = "0.4.52"
pathdiff = "0.2.3"
regex = "1.11.3"
semver = "1.0.27"
serde_json = "1.0.145"
toml = "0.5.11"
serde = "1.0.228"
